# bincode-grpc

bincode-grpc/: Cargo.toml
bincode-grpc-macro/: Cargo.toml
bincode-grpc-macro/src/: lib.rs
bincode-grpc/src/: lib.rs
example-service/: Cargo.toml
example-service/src/: main.rs
