[package]
name = "bincode-grpc-macro"
description = "proc macros for the bincode-grpc crate"
license = "AGPL-3.0-or-later"
version = "0.7.2"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2021"
repository = "https://github.com/L1AN0/bincode-grpc"
homepage = "https://github.com/L1AN0/bincode-grpc"
keywords = ["grpc", "rpc"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.22", features = ["full"] }
quote = "1.0"
heck = "0.4.1"
proc-macro-crate = "1.3.1"
