[package]
name = "bincode-grpc"
description = "grpc with bincode codec instead of protobuf"
license = "AGPL-3.0-or-later"
version = "0.7.2"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2021"
repository = "https://github.com/L1AN0/bincode-grpc"
homepage = "https://github.com/L1AN0/bincode-grpc"
keywords = ["grpc", "rpc"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
tracing = "0.1"
futures = "0.3"
thiserror = "1.0.40"


[dependencies.tonic]
version = "0.9.2"
default-features = false
features = ["transport", "channel", "gzip", "tls-roots"]

[dependencies.bincode]
version = "2.0.0-rc.3"
features = ["derive"]
